# LinAlg

./: CMakeLists.txt  build.sh
include/: basedef.h  matrix.h  memObj.h
src/: matrix_unit_test.cpp
unitTest/: CMakeLists.txt  MemObj_test.cpp  README.md  build.sh  matrix_operations_test.cpp  matrix_unit_tests.cpp
